--- a/public/index.html
+++ b/public/index.html
@@ -1,25 +1,42 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+<html lang="ro">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+  <title>BLAST MMA || Antrenamente MMA în București</title>
 
-  </body>
+  <meta name="description" content="BLAST MMA - Club de arte marțiale mixte în București. Antrenamente MMA, BJJ, kickboxing pentru toate nivelurile. Înfruntă-ți limitele!" />
+  <meta name="keywords" content="BLAST MMA, MMA București, Brazilian Jiu-Jitsu, BJJ, kickboxing, antrenamente MMA, arte martiale Bucuresti, club MMA, BLAST MMA Bucuresti" />
+  <meta name="author" content="BLAST MMA București" />
+  <meta name="theme-color" content="#000000" />
+
+  <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <meta name="apple-mobile-web-app-title" content="BLAST MMA" />
+  <link rel="manifest" href="/site.webmanifest" />
+
+  <meta property="og:title" content="BLAST MMA | Antrenamente MMA în București" />
+  <meta property="og:description" content="Antrenează-te alături de BLAST MMA! MMA, BJJ, kickboxing - depășește-ți limitele la cel mai nou club din București." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://blastmma.ro/" />
+  <meta property="og:image" content="/apple-touch-icon.png" />
+
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BLAST MMA | Antrenamente MMA și BJJ în București" />
+  <meta name="twitter:description" content="Antrenează-te cu BLAST MMA București. Club de arte marțiale mixte, BJJ, kickboxing." />
+  <meta name="twitter:image" content="/apple-touch-icon.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" />
+
+</head>
+
+<body>
+<noscript>Trebuie să activezi JavaScript pentru a folosi această aplicație.</noscript>
+<div id="root"></div>
+</body>
 </html>
